@@ -1,5 +1,10 @@
 2007-09-10  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimpperspectiveclonetool.c
+	(gimp_perspective_clone_tool_motion): removed unused variable.
+
+2007-09-10  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/psp.c: applied patch from Nils Philippsen that
 	fixes an endianess problem (bug #475464).
 
